--- a/README.adoc
+++ b/README.adoc
@@ -19,13 +19,6 @@ put together a list of users.
 image::https://travis-ci.org/tlocke/pg8000.svg?branch=master[Build Status]
 
 
-== Key Points
-
-* Use one thread per connection.
-* Internally, all queries use prepared statements. pg8000 remembers that a
-  prepared statement has been created, and uses it on subsequent queries.
-
-
 == Installation
 
 To install pg8000 using `pip` type:
@@ -304,6 +297,7 @@ XML types.
 [[_theory_of_operation]]
 == Theory Of Operation
 
+pg8000 is designed to be used with one thread per connection.
 
 Pg8000 communicates with the database using the
 http://www.postgresql.org/docs/current/static/protocol.html[PostgreSQL
@@ -312,7 +306,10 @@ statements. It uses the Extended Query feature of the FEBE. So the steps are:
 
 . Query comes in.
 . If pg8000 hasn't seen it before, send a PARSE message to the server to create
-  a prepared statement.
+  a prepared statement. The SQL query and a reference to the prepared statement
+  are stored by pg8000, so that if the query is executed again, pg8000 skips
+  the PARSE step and uses the prepared statement that already exists on the
+  server.
 . Send a BIND message to run the query using the prepared statement, resulting
   in an unnamed portal on the server.
 . Send an EXECUTE message to read all the results from the portal.
@@ -1070,6 +1067,7 @@ and add a line to pg_hba.conf for the various authentication options:
 host    pg8000_md5      all             127.0.0.1/32            md5
 host    pg8000_gss      all             127.0.0.1/32            gss
 host    pg8000_password all             127.0.0.1/32            password
+host    pg8000_scram_sha_256 all        127.0.0.1/32            scram-sha-256
 host    all             all             127.0.0.1/32            trust
 ....
 
